Fixed length counter element covering the Add button (#281)
(cherry picked from commit 9d33268)

--- a/src/main/resources/assets/admin/common/styles/api/input-common.less
+++ b/src/main/resources/assets/admin/common/styles/api/input-common.less
@@ -131,7 +131,6 @@
       .length-counter {
         .order(4);
         display: block;
-        width: 100%;
         position: absolute;
         right: 0;
         margin-top: 5px;
